refactored column mapping